Se creó con Colab

--- a/Clase05/03_estructuras_de_datos_parte2.ipynb
+++ b/Clase05/03_estructuras_de_datos_parte2.ipynb
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "nHfEQ0jVyYLb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +258,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +283,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,7 +312,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,10 +447,22 @@
         "print(numeros)\n"
       ],
       "metadata": {
-        "id": "D2ClA0CAutom"
+        "id": "D2ClA0CAutom",
+        "outputId": "67a62722-fd53-4e0c-c4f3-61b2305824a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -496,7 +508,7 @@
       "metadata": {
         "id": "169QsOxuvAbe"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -507,10 +519,22 @@
         "print(\"Unión:\", union)\n"
       ],
       "metadata": {
-        "id": "1hvqQ2F_vBtY"
+        "id": "1hvqQ2F_vBtY",
+        "outputId": "dba666ea-0d94-4a0a-de00-1033234bc3dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Unión: {1, 2, 3, 4, 5, 6, 7}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -520,10 +544,22 @@
         "print(\"Intersección:\", interseccion)\n"
       ],
       "metadata": {
-        "id": "0AU3PFc1vCh2"
+        "id": "0AU3PFc1vCh2",
+        "outputId": "0cf3c915-96c0-44a6-9ee8-8e0d6cd5bcd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Intersección: {4, 5}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -580,10 +616,78 @@
         "print(matriz)\n"
       ],
       "metadata": {
-        "id": "TK57Y4GUvQ3Z"
+        "id": "TK57Y4GUvQ3Z",
+        "outputId": "b4722ae3-7607-46ee-b2e6-e1b176d445bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz_one = [[1,2,3],\n",
+        "              [4,5,6],\n",
+        "              [7,8,9]]\n",
+        "print(matriz_one)\n"
+      ],
+      "metadata": {
+        "id": "J14O-KgwY9cB",
+        "outputId": "beca7943-d702-455a-8a74-6abd40a4ac1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "T7DVRWnJZMve"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Elemento en [0][0]\", matriz[1][0])"
+      ],
+      "metadata": {
+        "id": "EFkpf1avZMgO",
+        "outputId": "80ef5c85-687b-4031-f888-254187097976",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Elemento en [0][0] 4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -605,7 +709,138 @@
         "print(matriz)"
       ],
       "metadata": {
-        "id": "02wHfdwMvUB_"
+        "id": "02wHfdwMvUB_",
+        "outputId": "d1371e38-7647-4dad-8a46-d9f9a958fb54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2, 3], [4, 5, 6], [10, 8, 9]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "my_array = np.array([[[1,2,3],\n",
+        "                     [4,5,6],\n",
+        "                     [8,9,10]],\n",
+        "\n",
+        "                    [[1,2,3],\n",
+        "                     [4,5,6],\n",
+        "                     [8,9,10]\n",
+        "                    ]])\n",
+        "\n",
+        "\n",
+        "print(my_array)\n",
+        "my_array.shape # Forma de la matriz with numpy. Dimensiones (2,3,3) = 2 matrices de 3x3\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vFhM6gKsjOo3",
+        "outputId": "f9bd3c49-6e63-4223-d22b-f04cd8802181",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 1  2  3]\n",
+            "  [ 4  5  6]\n",
+            "  [ 8  9 10]]\n",
+            "\n",
+            " [[ 1  2  3]\n",
+            "  [ 4  5  6]\n",
+            "  [ 8  9 10]]]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 3, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(my_array+10)"
+      ],
+      "metadata": {
+        "id": "Yt5BfbQblvFd",
+        "outputId": "bd8287a5-ba1a-4499-bdcf-e2a016fb834b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[11 12 13]\n",
+            "  [14 15 16]\n",
+            "  [18 19 20]]\n",
+            "\n",
+            " [[11 12 13]\n",
+            "  [14 15 16]\n",
+            "  [18 19 20]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(my_array*2)"
+      ],
+      "metadata": {
+        "id": "L7hNGdNAl95-",
+        "outputId": "b1522357-5cc1-4613-b5bc-73dce8b7bc23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 2  4  6]\n",
+            "  [ 8 10 12]\n",
+            "  [16 18 20]]\n",
+            "\n",
+            " [[ 2  4  6]\n",
+            "  [ 8 10 12]\n",
+            "  [16 18 20]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5Dvi88OUmCdM"
       },
       "execution_count": null,
       "outputs": []
@@ -635,10 +870,24 @@
         "\n"
       ],
       "metadata": {
-        "id": "FZytH_LBvZrP"
+        "id": "FZytH_LBvZrP",
+        "outputId": "e6f80d0a-b20b-4949-e7fd-68308a7875d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]\n",
+            " [7 8 9]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -682,11 +931,117 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "import random\n",
+        "\n",
+        "matriz_four_dimension = np.array([[random.randint(1,100),random.randint(1,100),random.randint(1,100),random.randint(1,100)  ],\n",
+        "                         [random.randint(1,100),random.randint(1,100),random.randint(1,100), random.randint(1,100) ],\n",
+        "                         [random.randint(1,100),random.randint(1,100),random.randint(1,100), random.randint(1,100) ],\n",
+        "                         [random.randint(1,100),random.randint(1,100),random.randint(1,100), random.randint(1,100) ]\n",
+        "                         ])\n",
+        "\n",
+        "print(matriz_four_dimension)\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "7RMRCaRPvh1s"
+        "id": "7RMRCaRPvh1s",
+        "outputId": "795eb887-ee25-4edc-c79f-6b09dba662cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 37  43  16  36]\n",
+            " [ 58  74  60  38]\n",
+            " [ 12  80  60  15]\n",
+            " [100  48  55  80]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import random\n",
+        "lista = [random.randint(1,100) for x in range(0,4)]\n",
+        "lista_one = [random.randint(1,100) for x in range(0,4)]\n",
+        "lista_two = [random.randint(1,100) for x in range(0,4)]\n",
+        "lista_three = [random.randint(1,100) for x in range(0,4)]\n",
+        "\n",
+        "matriz_four_dimension = np.array([lista,\n",
+        "                         lista_one,\n",
+        "                         lista_two,\n",
+        "                         lista_three\n",
+        "                         ])\n",
+        "\n",
+        "print(matriz_four_dimension)"
+      ],
+      "metadata": {
+        "id": "cDAATpm-nSVL",
+        "outputId": "d14d4768-ed7c-483f-88a6-c680f93dff87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[100  13  87  20]\n",
+            " [ 46  82  86  12]\n",
+            " [  9  23  94  39]\n",
+            " [ 40  16  88  87]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.rand(4,4)"
+      ],
+      "metadata": {
+        "id": "jx4VRkngpg3U",
+        "outputId": "c44adc66-61b5-468f-cdb8-cb65ebf71bf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.03467346, 0.56631532, 0.90428777, 0.75163453],\n",
+              "       [0.15387352, 0.10545975, 0.19553751, 0.04096015],\n",
+              "       [0.72373455, 0.9660758 , 0.90927031, 0.91936943],\n",
+              "       [0.71584973, 0.56002655, 0.81930066, 0.52610792]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.rand?"
+      ],
+      "metadata": {
+        "id": "RSWlhI4_p6Zu"
+      },
+      "execution_count": 75,
       "outputs": []
     },
     {
