Se creó con Colab

--- a/Working_with_List,_dictionaries_and_Tuples.ipynb
+++ b/Working_with_List,_dictionaries_and_Tuples.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPvw/w7vczhEerYHxB8LjT",
+      "authorship_tag": "ABX9TyO0HnLz0OguxKmPRZ/ac6jT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -226,9 +226,59 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "food_menu = (\"Mondonguito\" , \"Pure de patatas\", \"Locro con atún\",\n",
+        "             \"Ceviche de caracol\" , \"Arroz con cocodrilo\")\n",
+        "for menu in food_menu:\n",
+        "  print(menu)\n",
+        "\n",
+        "food_menu = (\"Saltado\" , \"Tallarin Rojo\", \"Locro con atún\",\n",
+        "             \"Ceviche de caracol\" , \"Arroz con cocodrilo\")\n",
+        "\n",
+        "for menu in food_menu:\n",
+        "  print(menu)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-_tsM-mqM7pM",
+        "outputId": "32e99bdf-87ff-469a-eacd-bc6cd176e7a7"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mondonguito\n",
+            "Pure de patatas\n",
+            "Locro con atún\n",
+            "Ceviche de caracol\n",
+            "Arroz con cocodrilo\n",
+            "Saltado\n",
+            "Tallarin Rojo\n",
+            "Locro con atún\n",
+            "Ceviche de caracol\n",
+            "Arroz con cocodrilo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-_tsM-mqM7pM"
+        "id": "437gLHIERMeq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cMoEQIIARLlC"
       },
       "execution_count": null,
       "outputs": []
